Refactor servlets and services to use dependency injection; improve error handling and response management